amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-extension-scalar.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-extension-scalar.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-declaration
  Message: Cannot exist two or more types with name 'Date'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-extension-scalar.graphql#/declares/scalar/Date
  Property: 
  Range: [(6,0)-(6,31)]
  Location: 
